Edited under construstruction landing page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-Under construction.
-You see development branch:
+Under construction in development branch:
 <ul>
     <li><a href="https://ivanderlich.github.io/UsingBootstrap/">Live version</a></li>
     <li><a href="https://github.com/IvanDerlich/UsingBootstrap">Repository</a></li>
