Worked on the main

--- a/index.html
+++ b/index.html
@@ -74,24 +74,41 @@
     </nav>
 
     <main>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem earum quibusdam vel voluptatibus. Sunt, illum, doloremque est laborum eos molestias, fuga porro alias possimus corporis quaerat facilis aliquid consectetur reiciendis mollitia ut. Obcaecati tempore, deserunt, laborum soluta ab, cum quibusdam accusamus animi delectus adipisci culpa natus. Unde aliquid fugiat mollitia veritatis laboriosam dolore in, quo dignissimos asperiores doloremque at possimus quasi omnis nemo consequatur nobis tempore libero maiores magnam quis? Voluptatem non fugit neque eaque ducimus totam aperiam. Quis dolorum fugit molestiae sit magni praesentium pariatur qui culpa possimus dolore? Saepe nobis ab architecto quia, nostrum aut
-    </main>
-    <footer>
-        <div class="footer-container">
-            <div class="footer-header">
-                <div class="credits" >
-                    <img src="assets/imgs/red logo.png" alt="Red Logo" srcset="">
-                    <span  >@2019 Newsweek</span>
-                </div>
-                <img class="social-network-logos" src="assets/imgs/social network logos.png" alt="Social Network Logos" srcset="">
-            </div>  
-            <div class="footer-lists">
-                <div class="footer-list-1"></div>
-                <div class="footer-list-2" ></div>
-            </div>                      
-        </div>        
-    </footer>
-</body>
+        <div class="row">
+            <div class="main-column-1 col-lg-3 col-md-5"></div>
+            <div class="main-column-2 col-lg-6 col-md-7"></div>
+            <div class="main-column-3 col-lg-3 col-md-12" ></div>
+        </div>
+        <div class="row">
+            <div class="in-the-news-article col-md-3"></div>
+            <div class="in-the-news-article col-md-3"></div>
+            <div class="in-the-news-article col-md-3"></div>
+            <div class="in-the-news-article col-md-3"></div>
 
+            <div class="in-the-news-article col-md-3"></div>
+            <div class="in-the-news-article col-md-3"></div>
+            <div class="in-the-news-article col-md-3"></div>
+            <div class="in-the-news-article col-md-3"></div>
+
+        </div>
+
+     <div class="footer">
+            <div class="footer-container">
+                <div class="footer-header">
+                    <div class="credits" >
+                        <img src="assets/imgs/red logo.png" alt="Red Logo" srcset="">
+                        <span  >@2019 Newsweek</span>
+                    </div>
+                    <img class="social-network-logos" src="assets/imgs/social network logos.png" alt="Social Network Logos" srcset="">
+                </div>  
+                <div class="footer-lists row">
+                    <div class="footer-list-1 col-md-8 col-sm"></div>
+                    <div class="footer-list-2 col-md-4 " ></div>
+                </div>                      
+            </div>        
+        </div>
+    </main>
+    
+</body>
 
 </html>
