--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="assets/styles/fonts.css">
     <link rel="stylesheet" href="assets/styles/nav.css">
     <link rel="stylesheet" href="assets/styles/footer.css">
+    <link rel="stylesheet" href="assets/styles/common.css">
+    <link rel="icon" type="image/png" href="assets/imgs/favicon.ico">
     <!-- merge all these stlylesheets into one block -->
 </head>
 
@@ -75,22 +77,128 @@
 
     <main>
         <div class="row">
-            <div class="main-column-1 col-lg-3 col-md-5"></div>
-            <div class="main-column-2 col-lg-6 col-md-7"></div>
-            <div class="main-column-3 col-lg-3 col-md-12" ></div>
+            <div class="main-column-1 col-lg-3 col-md-5 sticky-top"></div>
+            <div class="main-column-2 col-lg-6 col-md-7 sticky-top"></div>
+            <div class="main-column-3 col-lg-3 col-md-12 sticky-top" ></div>
         </div>
-        <div class="row">
-            <div class="in-the-news-article col-md-3"></div>
-            <div class="in-the-news-article col-md-3"></div>
-            <div class="in-the-news-article col-md-3"></div>
-            <div class="in-the-news-article col-md-3"></div>
+        <div>
+            <p class="text-center">In the magazine</p>
+            <div class="row ">            
+                <div class="in-the-news-article col-md-3 bg-primary"></div>
+                <div class="in-the-news-article col-md-3 bg-secondary"></div>
+                <div class="in-the-news-article col-md-3 bg-success"></div>
+                <div class="in-the-news-article col-md-3 bg-green"></div>
 
-            <div class="in-the-news-article col-md-3"></div>
-            <div class="in-the-news-article col-md-3"></div>
-            <div class="in-the-news-article col-md-3"></div>
-            <div class="in-the-news-article col-md-3"></div>
-
+                <div class="in-the-news-article col-md-3 bg-deep-pink"></div>
+                <div class="in-the-news-article col-md-3 bg-primary"></div>
+                <div class="in-the-news-article col-md-3 bg-secondary"></div>
+                <div class="in-the-news-article col-md-3 bg-primary"></div>
+            </div>
         </div>
+        <div>
+            <p class="text-center">Editor's pick</p>
+            <div class="row ">            
+                <div class="in-the-news-article col-md-3 bg-primary"></div>
+                <div class="in-the-news-article col-md-3 bg-secondary"></div>
+                <div class="in-the-news-article col-md-3 bg-success"></div>
+                <div class="in-the-news-article col-md-3 bg-green"></div>
+
+                <div class="in-the-news-article col-md-3 bg-deep-pink"></div>
+                <div class="in-the-news-article col-md-3 bg-primary"></div>
+                <div class="in-the-news-article col-md-3 bg-secondary"></div>
+                <div class="in-the-news-article col-md-3 bg-primary"></div>
+            </div>
+        </div>
+        <div>
+            <p class="text-center">Featured Slideshows</p>
+            <div class="row ">            
+                <div class="featured-slideshows col-lg-4 col-md-6 bg-info "></div>
+                <div class="featured-slideshows col-lg-4 col-md-6 bg-success "></div>
+                <div class="featured-slideshows col-lg-4 col-md-6 bg-primary "></div>
+
+                <div class="featured-slideshows col-lg-4 col-md-6 bg-secondary "></div>
+                <div class="featured-slideshows col-lg-4 col-md-6 bg-info "></div>
+                <div class="featured-slideshows col-lg-4 col-md-6 bg-success "></div>
+            </div>
+        </div>
+        <div>
+            <p class="text-center">U.S.</p>
+            <div class="row">
+                <div class="last-section col-sm-4 bg-primary"></div>
+                <div class="last-section col-sm-4 bg-green"></div>
+                <div class="last-section col-sm-4 bg-success">
+                    <div class="mini bg-green"></div>
+                    <div class="mini bg-primary"></div>
+                    <div class="mini bg-secondary"></div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <p class="text-center">World</p>
+            <div class="row">
+                <div class="last-section col-sm-4 bg-primary"></div>
+                <div class="last-section col-sm-4 bg-green"></div>
+                <div class="last-section col-sm-4 bg-success">
+                    <div class="mini bg-green"></div>
+                    <div class="mini bg-primary"></div>
+                    <div class="mini bg-secondary"></div>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <p class="text-center">Business</p>
+            <div class="row">
+                <div class="last-section col-sm-4 bg-primary"></div>
+                <div class="last-section col-sm-4 bg-green"></div>
+                <div class="last-section col-sm-4 bg-success">
+                    <div class="mini bg-green"></div>
+                    <div class="mini bg-primary"></div>
+                    <div class="mini bg-secondary"></div>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <p class="text-center">Tech % Science</p>
+            <div class="row">
+                <div class="last-section col-sm-4 bg-primary"></div>
+                <div class="last-section col-sm-4 bg-green"></div>
+                <div class="last-section col-sm-4 bg-success">
+                    <div class="mini bg-green"></div>
+                    <div class="mini bg-primary"></div>
+                    <div class="mini bg-secondary"></div>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <p class="text-center">Culture</p>
+            <div class="row">
+                <div class="last-section col-sm-4 bg-primary"></div>
+                <div class="last-section col-sm-4 bg-green"></div>
+                <div class="last-section col-sm-4 bg-success">
+                    <div class="mini bg-green"></div>
+                    <div class="mini bg-primary"></div>
+                    <div class="mini bg-secondary"></div>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <p class="text-center">Sports</p>
+            <div class="row">
+                <div class="last-section col-sm-4 bg-primary"></div>
+                <div class="last-section col-sm-4 bg-green"></div>
+                <div class="last-section col-sm-4 bg-success">
+                    <div class="mini bg-green"></div>
+                    <div class="mini bg-primary"></div>
+                    <div class="mini bg-secondary"></div>
+                </div>
+            </div>
+        </div>
+        
+        
 
      <div class="footer">
             <div class="footer-container">
