Advance in several sections

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="assets/styles/common.css">
     <link rel="icon" type="image/png" href="assets/imgs/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> 
     <!-- merge all these stlylesheets into one block -->
 </head>
 
@@ -80,27 +81,117 @@
         <div class="row d-flex">
             <div class="main-column-1 col-lg-3 col-md-5 sticky-top order-sm-1 order-md-0 order-lg-0">
                 <span class="section-title featured-stories">featured Histories</span>
-                <div class="left-column-article ">                            
-                    <!-- Ver si las clases de imagenes de repite-->            
+                <div class="">                                     
                     <img src="assets/imgs/momentum-awards.png" class="col-12 mb-3"></img>
                     <h1 class="title1">The Newsweek Momentum awards</h1>
-                    <p>The Newsweek Momentum Awards will recognize five individuals around the globe, as well as one city, which will be chosen as the "smartest city in the world."</p>
+                    <p class="text">The Newsweek Momentum Awards will recognize five individuals around the globe, as well as one city, which will be chosen as the "smartest city in the world."</p>
+                </div>
+                <div class="">                                     
+                    <img src="assets/imgs/news1.png" class="col-12 mb-3"></img>
+                    <h1 class="title1">Elizabeth Warren Wins Over College Students During Democratic Debate </h1>
+                    <p class="text">The 2020 election will be the first time many college students can vote and Warren's plan for higher education could be a winning point with them.</p>
+                </div>
+                <div class="">                                     
+                    <img src="assets/imgs/news-bigtech.png" class="col-12 mb-3"></img>
+                    <h1 class="title1">Americans Sour on Big Tech, Remain Deeply Divided on Key Institutions</h1>
+                    <p class="text">Only 50 percent of adults think tech companies have a positive impact on society, compared with 71 percent just four years ago.</p>
+                </div>
+                <div class="">                                     
+                    <img src="assets/imgs/survey.png" class="col-12 mb-3"></img>
+                    <h1 class="title1">Best Nursing Homes</h1>
+                    <p class="text border">Newsweek is partnering with the respected global data research firm Statista Inc. to establish a ranking of Best Nursing Homes. The final rankings will be published in Newsweek magazine and on Newsweek.com</p>
+                </div>
+                <div class=" ">                            
+                    <img src="assets/imgs/children.png" class="col-12 mb-3"></img>
+                    <h1 class="title1">Why IB schools lead to a better degree for your child</h1>
+                    <p class="text border">The International Baccalaureate (IB) accredited schools inspire young people to become lifelong learners and academic high achievers - find out more.</p>
                 </div>
             </div>
             <div class="main-column-2 col-lg-6 col-md-7 sticky-top order-sm-0">
                 <div>
                     <span class="section-title">top Story</span>
+                    <div class=" ">                            
+                        <img src="assets/imgs/world.png" class="col-12 mb-3"></img>
+                        <h1 class="title1">Iran Claims Saudi Arabia Killed More Than 3,000 Americans, Still Gets to Go Nuclear</h1>
+                        <p class="text">The Trump administration has been accused of illicitly transferring nuclear technology to Saudi Arabia, which has threatened to build a nuclear bomb if Iran did.</p>
+                    </div>
                 </div>
-                <div>
-                    <span class="section-title">culture & Travel</span>
+                <span class="section-title">culture & Travel</span>
+                <div class="row">                    
+                    <div class=" col-6">                            
+                        <img src="assets/imgs/best-cocktails.png" class="col-12 mb-3"></img>
+                        <h1 class="title1">7 Best Cocktail Bars in Los Angeles</h1>
+                        <p class="text  ">Los Angeles has quickly become one of the best cocktail cities in America and has the bars to prove it.</p>
+                    </div>
+                    <div class="col-6">                            
+                        <img src="assets/imgs/jewlry.png" class="col-12 mb-3"></img>
+                        <h1 class="title1">Ancient Egypt: Underwater Archaeologists Find Temple Ruins in Sunken City</h1>
+                        <p class="text">Researchers also found treasures like jewelry and coins in the remains of ancient shipwrecks.</p>
+                    </div>
                 </div>
-                <div>
+                <div>   
                     <span class="section-title">more stories</span>
+                    <div class="">                            
+                        <img class="float-left" src="assets/imgs/trump-administration.png" class="col-12 mb-3"></img>
+                        <h1 class="title1">Trump Administration Proposes Allowing Importation of Cheaper Drugs From Canada</h1>
+                        <p class="text">"For too long American patients have been paying exorbitantly high prices for prescription drugs that are made available to other countries at lower prices," Health and Human Services Secretary Alex Azar said in a statement Wednesday.</p>
+                    </div>
+                    <div class="">                            
+                        <img class="float-left" src="assets/imgs/hong-kong.png" class="col-12 mb-3"></img>
+                        <h1 class="title1">China Says Hong Kong Protests Are 'Somehow the Work of the U.S.'</h1>
+                        <p class="text">A Chinese Foreign Ministry spokesperson said the "the U.S. owes the world an explanation" as to its alleged role in Hong Kong and warned that "those who play fire will only get themselves burned."</p>
+                    </div>
                 </div>
             </div>
             <div class="main-column-3 col-lg-3 col-md-12 sticky-top order-sm-2" >                
                 <span class="section-title">opinion</span>
+                <div>
+                    <article class="opinion d-flex mb-4 pb-2 pt-2 border-bottom border-dark">
+                        <img class="headshots mr-3" src="assets/imgs/headshots-opinion/david-zweig.png" alt="David-Zweig">
+                        <div>
+                            <h1 class="title1 title2">There's Only One Way the Crisis Here in Hong Kong Can Be Resolved </h1>
+                            <div class="section-title author">By David Zweig</div>
+                        </div>                        
+                    </article>
+                    <article class="opinion d-flex mb-4 pb-2 pt-2 border-bottom border-dark">
+                        <img class="headshots mr-3" src="assets/imgs/headshots-opinion/richard-saenz.png" alt="David-Zweig">
+                        <div>
+                            <h1 class="title1 title2">Bringing Back the Federal Death Penalty Will Hit LGBTQ and People of Color the Hardest </h1>
+                            <div class="section-title author">Richard Saenz</div>
+                        </div>                        
+                    </article>
+                    <article class="opinion d-flex mb-4 pb-2 pt-2 border-bottom border-dark">
+                        <img class="headshots mr-3" src="assets/imgs/headshots-opinion/newt-gingrich.png" alt="David-Zweig">
+                        <div>
+                            <h1 class="title1 title2">Boris Johnson Is Already Helping Make Britain Great Again </h1>
+                            <div class="section-title author">By Newt Gingrich</div>
+                        </div>                        
+                    </article>
+                    <article class="opinion d-flex mb-4 pb-2 pt-2 border-bottom border-dark">
+                        <img class="headshots mr-3" src="assets/imgs/headshots-opinion/heather-thompson-day.png" alt="David-Zweig">
+                        <div>
+                            <h1 class="title1 title2">To the Girl I Bullied in School</h1>
+                            <div class="section-title author">By Heather Thompson Day</div>
+                        </div>                        
+                    </article>
+                    <article class="opinion d-flex mb-4 pb-2 pt-2 border-bottom border-dark">
+                        <img class="headshots mr-3" src="assets/imgs/headshots-opinion/lee-habeeb.png" alt="David-Zweig">
+                        <div>
+                            <h1 class="title1 title2">Trump May Be Crude, but Baltimore Really Is Spiraling—That's Why I Left</h1>
+                            <div class="section-title author">By Lee Habeb</div>
+                        </div>                        
+                    </article>
+                    <article class="d-flex">
+                        <img class="headshots mr-3" src="assets/imgs/headshots-opinion/jeff-clements.png" alt="David-Zweig">
+                        <div>
+                            <h1 class="title1 title2">rain Big Money Out of Politics. Overturn Citizens United. Pass the 28th </h1>
+                            <div class="section-title author">By Jeff Clements</div>
+                        </div>                        
+                    </article>
+
+                </div>
                 <span class="section-title">latests news</span>
+                <div></div>
             </div>
         </div>
         <div>
