Finished medium size

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <main>
         <div class="row d-flex">
-            <div class="main-column-1 col-lg-3 col-md-5 sticky-top order-sm-1 order-md-0 order-lg-0">
+            <div class="sm-sticky-top-remove main-column-1 sticky-top col-lg-3 col-md-5 col-sm-12 order-sm-1 order-lg-0 order-xl-0">
                 <span class="section-title featured-stories">featured Histories</span>
                 <div class="">                                     
                     <img src="assets/imgs/momentum-awards.png" class="col-12 mb-3"></img>
@@ -107,7 +107,7 @@
                     <p class="text border">The International Baccalaureate (IB) accredited schools inspire young people to become lifelong learners and academic high achievers - find out more.</p>
                 </div>
             </div>
-            <div class="main-column-2 col-lg-6 col-md-7 sticky-top order-sm-0">
+            <div class="main-column-2 sm-sticky-top-remove col-lg-6 col-md-7 col-sm-12 sticky-top order-sm-0">
                 <div>
                     <span class="section-title">top Story</span>
                     <div class=" ">                            
@@ -118,12 +118,12 @@
                 </div>
                 <span class="section-title">culture & Travel</span>
                 <div class="row">                    
-                    <div class=" col-6">                            
+                    <div class=" col-6 col-sm-12">                            
                         <img src="assets/imgs/best-cocktails.png" class="col-12 mb-3"></img>
                         <h1 class="title1">7 Best Cocktail Bars in Los Angeles</h1>
                         <p class="text  ">Los Angeles has quickly become one of the best cocktail cities in America and has the bars to prove it.</p>
                     </div>
-                    <div class="col-6">                            
+                    <div class="col-6 col-sm-12">                            
                         <img src="assets/imgs/jewlry.png" class="col-12 mb-3"></img>
                         <h1 class="title1">Ancient Egypt: Underwater Archaeologists Find Temple Ruins in Sunken City</h1>
                         <p class="text">Researchers also found treasures like jewelry and coins in the remains of ancient shipwrecks.</p>
@@ -143,7 +143,7 @@
                     </div>
                 </div>
             </div>
-            <div class="main-column-3 col-lg-3 col-md-12 sticky-top order-sm-2" >                
+            <div class="main-column-3 sm-sticky-top-remove col-lg-3 col-md-12 sticky-top order-sm-2" >                
                 <span class="section-title">opinion</span>
                 <div>
                     <article class="opinion d-flex mb-4 pb-2 pt-2 border-bottom border-dark">
@@ -215,45 +215,45 @@
                 <span class="title1 uppercase">In the magazine</span>
             </div>
             <div class="row">            
-                <article class="col-3 col-md-3 bg-primary overflow-hidden p-4">
-                    <img class="h-75" src="assets/imgs/charlotsville.jpg" alt="">
+                <article class="col-3 col-md-3 bg-primary overflow-hidden p-lg-4 ">
+                    <img class="pic-height" src="assets/imgs/charlotsville.jpg" alt="">
                     <img src="assets/imgs/cover-us.png" alt="">
                     <h1 class="title1">The inside story of Charlottesville</h1>
                 </article>
-                <article class="col-md-3 col-3 bg-primary overflow-hidden p-4">
-                    <img class="h-75" src="assets/imgs/Terry-McAuliffe.png" alt="">
+                <article class="col-md-3 col-3 bg-primary overflow-hidden p-lg-4">
+                    <img class="pic-height" src="assets/imgs/Terry-McAuliffe.png" alt="">
                     <img src="assets/imgs/cover-us.png" alt="">
                     <h1 class="title1">Terry McAuliffe on Charlottesville, Racism and Donald Trump</h1>
                 </article>
-                <article class="col-md-3 col-3 bg-primary overflow-hidden p-4">
-                    <img class="h-75" src="assets/imgs/divided-city.png" alt="">
+                <article class="col-md-3 col-3 bg-primary overflow-hidden p-lg-4">
+                    <img class="pic-height" src="assets/imgs/divided-city.png" alt="">
                     <img src="assets/imgs/cover-us.png" alt="">
                     <h1 class="title1">A Deeper Divide in a Divided City</h1>
                 </article>
-                <article class="col-md-3 col-3 bg-primary overflow-hidden p-4">
-                    <img class="h-75" src="assets/imgs/re-make-money.png" alt="">
+                <article class="col-md-3 col-3 bg-primary overflow-hidden p-lg-4">
+                    <img class="pic-height" src="assets/imgs/re-make-money.png" alt="">
                     <img src="assets/imgs/cover-us.png" alt="">
                     <h1 class="title1">How To (Re)Make Money</h1>
                 </article> 
             </div>
             <div class="row">            
                 <article class="col-3 col-md-3 bg-primary overflow-hidden p-4">
-                    <img class="h-75" src="assets/imgs/charlotsville.jpg" alt="">
+                    <img class="pic-height" src="assets/imgs/charlotsville.jpg" alt="">
                     <img src="assets/imgs/cover-us.png" alt="">
                     <h1 class="title1">The inside story of Charlottesville</h1>
                 </article>
                 <article class="col-md-3 col-3 bg-primary overflow-hidden p-4">
-                    <img class="h-75" src="assets/imgs/Terry-McAuliffe.png" alt="">
+                    <img class="pic-height" src="assets/imgs/Terry-McAuliffe.png" alt="">
                     <img src="assets/imgs/cover-us.png" alt="">
                     <h1 class="title1">Terry McAuliffe on Charlottesville, Racism and Donald Trump</h1>
                 </article>
                 <article class="col-md-3 col-3 bg-primary overflow-hidden p-4">
-                    <img class="h-75" src="assets/imgs/divided-city.png" alt="">
+                    <img class="pic-height" src="assets/imgs/divided-city.png" alt="">
                     <img src="assets/imgs/cover-us.png" alt="">
                     <h1 class="title1">A Deeper Divide in a Divided City</h1>
                 </article>
                 <article class="col-md-3 col-3 bg-primary overflow-hidden p-4">
-                    <img class="h-75" src="assets/imgs/re-make-money.png" alt="">
+                    <img class="pic-height" src="assets/imgs/re-make-money.png" alt="">
                     <img src="assets/imgs/cover-us.png" alt="">
                     <h1 class="title1">How To (Re)Make Money</h1>
                 </article> 
@@ -267,34 +267,34 @@
             </div>  
             <div class="row">
                 <article class="col-4 col-md-4 bg-primary overflow-hidden p-4">
-                    <img class="h-75" src="assets/imgs/charlotsville.jpg" alt="">
+                    <img class="pic-height" src="assets/imgs/charlotsville.jpg" alt="">
                     <img src="assets/imgs/cover-us.png" alt="">
                     <h1 class="title1">The inside story of Charlottesville</h1>
                 </article>
                 <article class="col-md-4 col-4 bg-primary overflow-hidden p-4">
-                    <img class="h-75 w-100" src="assets/imgs/Terry-McAuliffe.png" alt="">
+                    <img class="pic-height w-100" src="assets/imgs/Terry-McAuliffe.png" alt="">
                     <img src="assets/imgs/cover-us.png" alt="">
                     <h1 class="title1">Terry McAuliffe on Charlottesville, Racism and Donald Trump</h1>
                 </article>
                 <article class="col-md-4 col-4 bg-primary overflow-hidden p-4">
-                    <img class="h-75 w-100" src="assets/imgs/divided-city.png" alt="">
+                    <img class="pic-height w-100" src="assets/imgs/divided-city.png" alt="">
                     <img src="assets/imgs/cover-us.png" alt="">
                     <h1 class="title1">A Deeper Divide in a Divided City</h1>
                 </article>
             </div>  
             <div class="row">
                 <article class="col-4 col-md-4 bg-primary overflow-hidden p-4">
-                    <img class="h-75" src="assets/imgs/charlotsville.jpg" alt="">
+                    <img class="pic-height" src="assets/imgs/charlotsville.jpg" alt="">
                     <img src="assets/imgs/cover-us.png" alt="">
                     <h1 class="title1">The inside story of Charlottesville</h1>
                 </article>
                 <article class="col-md-4 col-4 bg-primary overflow-hidden p-4">
-                    <img class="h-75 w-100" src="assets/imgs/Terry-McAuliffe.png" alt="">
+                    <img class="pic-height w-100" src="assets/imgs/Terry-McAuliffe.png" alt="">
                     <img src="assets/imgs/cover-us.png" alt="">
                     <h1 class="title1">Terry McAuliffe on Charlottesville, Racism and Donald Trump</h1>
                 </article>
                 <article class="col-md-4 col-4 bg-primary overflow-hidden p-4">
-                    <img class="h-75 w-100" src="assets/imgs/divided-city.png" alt="">
+                    <img class="pic-height w-100" src="assets/imgs/divided-city.png" alt="">
                     <img src="assets/imgs/cover-us.png" alt="">
                     <h1 class="title1">A Deeper Divide in a Divided City</h1>
                 </article>
@@ -302,19 +302,21 @@
         </div>
     </div>
     <div>
-        <p class="text-center">U.S.</p>
+        <div class="d-block ml-auto mr-auto">                
+            <span class="title1 uppercase red-text">U.S.</span>                  
+        </div> 
         <div class="row">
                 <article class="col-4 col-md-4 bg-primary overflow-hidden p-4">
-                    <img class="h-75" src="assets/imgs/charlotsville.jpg" alt="">
+                    <img class="pic-height" src="assets/imgs/charlotsville.jpg" alt="">
                     <img src="assets/imgs/cover-us.png" alt="">
                     <h1 class="title1">The inside story of Charlottesville</h1>
                 </article>
                 <article class="col-md-4 col-4 bg-primary overflow-hidden p-4">
-                    <img class="h-75 w-100" src="assets/imgs/Terry-McAuliffe.png" alt="">
+                    <img class="pic-height w-100" src="assets/imgs/Terry-McAuliffe.png" alt="">
                     <img src="assets/imgs/cover-us.png" alt="">
                     <h1 class="title1">Terry McAuliffe on Charlottesville, Racism and Donald Trump</h1>
                 </article>
-                <div class="col-md-4 col-4 bg-primary overflow-hidden p-4 border-bottom ">
+                <div class="col-md-4 col-4 bg-primary overflow-hidden p-4">
                     
                     <article class="h-33 row border-bottom pb-3 pt-3">
                         <img class="latest-news-image col-5" src="assets/imgs/congressman.png" alt="congressman">
@@ -332,19 +334,21 @@
             </div> 
     </div>
     <div>
-        <p class="text-center">U.S.</p>
+        <div class="d-block ml-auto mr-auto">                
+            <span class="title1 uppercase red-text">U.S.</span>                  
+        </div> 
         <div class="row">
                 <article class="col-4 col-md-4 bg-primary overflow-hidden p-4">
-                    <img class="h-75" src="assets/imgs/charlotsville.jpg" alt="">
+                    <img class="pic-height" src="assets/imgs/charlotsville.jpg" alt="">
                     <img src="assets/imgs/cover-us.png" alt="">
                     <h1 class="title1">The inside story of Charlottesville</h1>
                 </article>
                 <article class="col-md-4 col-4 bg-primary overflow-hidden p-4">
-                    <img class="h-75 w-100" src="assets/imgs/Terry-McAuliffe.png" alt="">
+                    <img class="pic-height w-100" src="assets/imgs/Terry-McAuliffe.png" alt="">
                     <img src="assets/imgs/cover-us.png" alt="">
                     <h1 class="title1">Terry McAuliffe on Charlottesville, Racism and Donald Trump</h1>
                 </article>
-                <div class="col-md-4 col-4 bg-primary overflow-hidden p-4 border-bottom ">
+                <div class="col-md-4 col-4 bg-primary overflow-hidden p-4 ">
                     
                     <article class="h-33 row border-bottom pb-3 pt-3">
                         <img class="latest-news-image col-5" src="assets/imgs/congressman.png" alt="congressman">
